# sokka

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  compile_commands.json
src/: main.cpp
